Fix/url search params (#334)
* Test out using react hook instead of doing it myself

* Store search params as component state, use state in form action

* Conditionally render each component, remove early returns

* Change styling so tables don't overlap navbar

* Remove shrinking form on submit

* Remove button from NoResults component

* Make marketshare overview page persist params better

* Add search params changes to craftsim page

* Tidy up after merge

* Use encode / decode functions

* Decode arrays before using them

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -929,6 +929,10 @@ select {
   margin-bottom: 6rem;
 }
 
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
 .ml-0 {
   margin-left: 0px;
 }
@@ -3045,8 +3049,8 @@ select {
     display: none;
   }
 
-  .md\:w-\[265px\] {
-    width: 265px;
+  .md\:w-64 {
+    width: 16rem;
   }
 
   .md\:min-w-\[480px\] {
